--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "expo": "^51.0.0",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.0",
-    "react-native-web": "~0.19.6",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.27.6"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
