--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
