--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-location": "^18.0.1",
+    "expo-location": "~17.0.1",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2.0",
@@ -32,7 +32,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-sqlite": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
