--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-splash-screen": "~0.27.6",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -33,7 +34,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-redux": "^9.1.2",
-    "expo-sqlite": "~14.0.6"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
