--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -21,12 +22,15 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
+    "expo-print": "^14.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.6",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.0",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-maps": "^1.20.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
